--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@ layout: default
 titleAfter: Front-end work made easy.
 meta: Definition of Wikia look and feel with code examples ready to use.
 priority: 1.0
+contentClass: main-image
 ---
-
-<p>This is the main page</p>
+<div>
+	<h1>Styleguide</h1>
+	<h2>Front-end work made easy.</h2>
+</div>
