--- a/_posts/identity/2014-01-01-some-identity-page.html
+++ b/_posts/identity/2014-01-01-some-identity-page.html
@@ -1,4 +1,14 @@
 ---
-layout: default
+layout: subpage
+subpageCategory: Identity
 ---
-some identity subpage
+
+<header>
+	<h1>Some identity page</h1>
+	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla lacus velit, pretium vitae mattis nec, tempor a tellus. Sed lobortis scelerisque risus ut congue. Aenean a leo dapibus, rutrum lectus at, dapibus sem. Nunc luctus felis enim. Vivamus fermentum euismod fringilla.</p>
+</header>
+<div class="content">
+	<p>Aenean porta consectetur tristique. Fusce vel elit tellus. Phasellus tristique porta sapien, quis fringilla metus vehicula et. Pellentesque quis condimentum enim, pellentesque ultricies massa. Nullam ultricies, nulla id commodo luctus, ante neque malesuada elit, vitae dapibus quam nisl sit amet nunc. Aenean in urna sed odio laoreet bibendum in eget magna. Ut tortor lorem, feugiat eu ligula vel, tincidunt facilisis magna.</p>
+
+	<p>Duis posuere, metus non sollicitudin convallis, nibh augue rhoncus orci, eget interdum purus sapien scelerisque orci. Aliquam erat volutpat. Aliquam quam lorem, condimentum et ultrices ac, sagittis vitae sem. Suspendisse luctus sapien at vestibulum posuere. Pellentesque malesuada erat elit, sed pretium lorem tempus non. Fusce neque enim, placerat molestie nunc eget, vestibulum imperdiet massa. In vitae elit ac risus lobortis porttitor. In id purus erat. Duis ut tincidunt magna, at convallis lectus. Vivamus hendrerit diam sed ornare feugiat. Sed interdum sed sem a feugiat. Aliquam congue elementum cursus. Donec vulputate pellentesque arcu, quis tincidunt velit luctus commodo.</p>
+</div>
