--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 titleAfter: Front-end work made easy.
 meta: Definition of Wikia look and feel with code examples ready to use.
 priority: 1.0
-contentClass: main-image
+contentClass: container-home
 ---
 <div>
 	<h1>Styleguide</h1>
