Navigation active and hover three levels styling

--- a/_posts/identity/2014-01-01-some-identity-page.html
+++ b/_posts/identity/2014-01-01-some-identity-page.html
@@ -1,6 +1,8 @@
 ---
 layout: subpage
-subpageCategory: Identity
+title: Identity subpage
+category: identity-sub
+permalink: website/identity/identity-sub
 ---
 
 <header>
