--- a/index.html
+++ b/index.html
@@ -3,9 +3,25 @@ layout: default
 titleAfter: Front-end work made easy.
 meta: Definition of Wikia look and feel with code examples ready to use.
 priority: 1.0
-contentClass: container-home
+contentClass: content-home
 ---
-<div>
-	<h1>Styleguide</h1>
-	<h2>Front-end work made easy.</h2>
+<header class="header-home main-columns-right">
+	<div>
+		<h1>Styleguide</h1>
+		<h2>Front-end work made easy.</h2>
+	</div>
+</header>
+<div class="main-container {{page.contentClass}}">
+	<div class="row full-width">
+		<div class="small-8 columns large-offset-2 small-offset-2">
+			<h2>Who is for?</h2>
+			<p><strong>1.</strong> Creating guide will take some time up front, but this pays off with faster build times for new sections and pages, because anyone joining an ongoing project can refer to the guide for the exact styles to use.</p>
+
+			<p><strong>2.</strong> Guide allows us to standardize the CSS, keeping it small and quick to load. By using the guide as an inventory of modules and code, both designers and developers can quickly see if new designs deviate from established standards, and decide as a team if itís worth expanding the codebase or if something already written is easily extended. When you have no guide, this is impossible.</p>
+
+			<p><strong>3.</strong> Design consistency is easier to maintain, as the designer can look in one place to reference the siteís components and ensure a cohesive look and feel throughout. This is especially helpful on larger teams and at enterprise-level companies where you may have an entire team of designers working on the site. And when design consistency is maintained, the codebase is also kept smaller.</p>
+
+			<p><strong>4.</strong> Communication becomes clearer. It also gave the entire team a shared vocabulary, like the names of modules, to use in talking about the designs once they were coded.</p>
+		</div>
+	</div>
 </div>
