Refactoring CSS and ading header for typography page

--- a/_posts/website/visual-design/2014-01-01-typography.html
+++ b/_posts/website/visual-design/2014-01-01-typography.html
@@ -1,15 +1,31 @@
 ---
 layout: subpage
-title: Typo
+title: Typography
 category: visual-design-sub
 permalink: website/visual-design/typography
 ---
 
 <header>
-	<h1>Some identity page</h1>
-	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla lacus velit, pretium vitae mattis nec, tempor a tellus. Sed lobortis scelerisque risus ut congue. Aenean a leo dapibus, rutrum lectus at, dapibus sem. Nunc luctus felis enim. Vivamus fermentum euismod fringilla.</p>
+	<h1 class="small-12 columns">Helvetica Neue</h1>
+	<div class="row full-width">
+		<div class="small-8 columns">
+			<p>This typeface, designed by Max Miedinger and other project members at the Haas’sche Schriftgiesserei, has become one of the most famous and popular typefaces in the world, thanks to the marketing strategy of Stempel and Linotype. It forms an integral part of many printers and operating systems. The original letterforms of Helvetica had to be modified for the Linotype system. Over the years, Helvetica was expanded to include many different weights, but these were not coordinated with each other.</p>
+		</div>
+		<div class="small-4 columns">
+			<a href="" target="_blank" class="button right">Download font</a>
+		</div>
+	</div>
 </header>
 <div class="content">
+	<nav class="nav-section">
+		<ul>
+			<li><a href="section-h1">H1</a></li>
+			<li><a href="section-h2">H2</a></li>
+			<li><a href="section-h3">H3</a></li>
+			<li><a href="section-h4">H4</a></li>
+			<li><a href="section-h5">H5</a></li>
+		</ul>
+	</nav>
 	<p>Aenean porta consectetur tristique. Fusce vel elit tellus. Phasellus tristique porta sapien, quis fringilla metus vehicula et. Pellentesque quis condimentum enim, pellentesque ultricies massa. Nullam ultricies, nulla id commodo luctus, ante neque malesuada elit, vitae dapibus quam nisl sit amet nunc. Aenean in urna sed odio laoreet bibendum in eget magna. Ut tortor lorem, feugiat eu ligula vel, tincidunt facilisis magna.</p>
 
 	<p>Duis posuere, metus non sollicitudin convallis, nibh augue rhoncus orci, eget interdum purus sapien scelerisque orci. Aliquam erat volutpat. Aliquam quam lorem, condimentum et ultrices ac, sagittis vitae sem. Suspendisse luctus sapien at vestibulum posuere. Pellentesque malesuada erat elit, sed pretium lorem tempus non. Fusce neque enim, placerat molestie nunc eget, vestibulum imperdiet massa. In vitae elit ac risus lobortis porttitor. In id purus erat. Duis ut tincidunt magna, at convallis lectus. Vivamus hendrerit diam sed ornare feugiat. Sed interdum sed sem a feugiat. Aliquam congue elementum cursus. Donec vulputate pellentesque arcu, quis tincidunt velit luctus commodo.</p>
