Typography page content and styling

--- a/_posts/website/visual-design/2014-01-01-typography.html
+++ b/_posts/website/visual-design/2014-01-01-typography.html
@@ -19,13 +19,74 @@ permalink: website/visual-design/typography
 <div class="content">
 	<nav class="nav-section">
 		<ul>
-			<li><a href="section-h1">H1</a></li>
-			<li><a href="section-h2">H2</a></li>
-			<li><a href="section-h3">H3</a></li>
-			<li><a href="section-h4">H4</a></li>
-			<li><a href="section-h5">H5</a></li>
+			<li><a href="#section-h1">H1</a></li>
+			<li><a href="#section-h2">H2</a></li>
+			<li><a href="#section-h3">H3</a></li>
+			<li><a href="#section-h4">H4</a></li>
+			<li><a href="#section-h5">H5</a></li>
 		</ul>
 	</nav>
+
+	<div id="section-h1" class="row full-width">
+		<div class="small-4 columns">
+			<h1>h1</h1>
+			<p>lorem ipsum sit amet</p>
+		</div>
+		<div class="small-8 columns">
+			<h1>A wizard's job is to vex chumps quickly in fog.</h1>
+		</div>
+
+		<div class="small-8 columns code-field">
+			Code field
+		</div>
+		<div class="small-4 columns">
+			<h6>Notes</h6>
+			<p>H1 is used in the page header  - usually as a link and only once per page</p>
+		</div>
+
+	</div>
+
+
+	<div id="section-h2" class="row full-width">
+		<div class="small-4 columns">
+			<h1>h2</h1>
+			<p>lorem ipsum sit amet</p>
+		</div>
+		<div class="small-8 columns">
+			<h1>A wizard's job is to vex chumps quickly in fog.
+				The wizard quickly jinxed the gnomes before they vaporized.</h1>
+		</div>
+
+		<div class="small-8 columns code-field">
+			Code field
+		</div>
+		<div class="small-4 columns">
+			<h6>Notes</h6>
+			<p>H1 is used in the page header  - usually as a link and only once per page</p>
+		</div>
+	</div>
+
+	<div id="section-h3" class="row full-width">
+		<div class="small-4 columns">
+			<h1>h3</h1>
+			<p>lorem ipsum sit amet</p>
+		</div>
+		<div class="small-8 columns">
+			<h1>A wizard's job is to vex chumps quickly in fog.
+				The wizard quickly jinxed the gnomes before they vaporized.</h1>
+		</div>
+
+		<div class="small-8 columns code-field">
+			Code field
+		</div>
+		<div class="small-4 columns">
+			<h6>Notes</h6>
+			<p>H1 is used in the page header  - usually as a link and only once per page</p>
+		</div>
+	</div>
+
+
+
 	<p>Aenean porta consectetur tristique. Fusce vel elit tellus. Phasellus tristique porta sapien, quis fringilla metus vehicula et. Pellentesque quis condimentum enim, pellentesque ultricies massa. Nullam ultricies, nulla id commodo luctus, ante neque malesuada elit, vitae dapibus quam nisl sit amet nunc. Aenean in urna sed odio laoreet bibendum in eget magna. Ut tortor lorem, feugiat eu ligula vel, tincidunt facilisis magna.</p>
 
 	<p>Duis posuere, metus non sollicitudin convallis, nibh augue rhoncus orci, eget interdum purus sapien scelerisque orci. Aliquam erat volutpat. Aliquam quam lorem, condimentum et ultrices ac, sagittis vitae sem. Suspendisse luctus sapien at vestibulum posuere. Pellentesque malesuada erat elit, sed pretium lorem tempus non. Fusce neque enim, placerat molestie nunc eget, vestibulum imperdiet massa. In vitae elit ac risus lobortis porttitor. In id purus erat. Duis ut tincidunt magna, at convallis lectus. Vivamus hendrerit diam sed ornare feugiat. Sed interdum sed sem a feugiat. Aliquam congue elementum cursus. Donec vulputate pellentesque arcu, quis tincidunt velit luctus commodo.</p>
