Adding more H sections

--- a/_posts/website/visual-design/2014-01-01-typography.html
+++ b/_posts/website/visual-design/2014-01-01-typography.html
@@ -53,8 +53,8 @@ permalink: website/visual-design/typography
 			<p>lorem ipsum sit amet</p>
 		</div>
 		<div class="small-8 columns">
-			<h1>A wizard's job is to vex chumps quickly in fog.
-				The wizard quickly jinxed the gnomes before they vaporized.</h1>
+			<h2>A wizard's job is to vex chumps quickly in fog.
+			</h2>
 		</div>
 
 		<div class="small-8 columns code-field">
@@ -72,8 +72,8 @@ permalink: website/visual-design/typography
 			<p>lorem ipsum sit amet</p>
 		</div>
 		<div class="small-8 columns">
-			<h1>A wizard's job is to vex chumps quickly in fog.
-				The wizard quickly jinxed the gnomes before they vaporized.</h1>
+			<h3>A wizard's job is to vex chumps quickly in fog.
+				The wizard quickly jinxed the gnomes before they vaporized.</h3>
 		</div>
 
 		<div class="small-8 columns code-field">
@@ -84,6 +84,45 @@ permalink: website/visual-design/typography
 			<p>H1 is used in the page header  - usually as a link and only once per page</p>
 		</div>
 	</div>
+	
+	<div id="section-h4" class="row full-width">
+		<div class="small-4 columns">
+			<h1>h4</h1>
+			<p>lorem ipsum sit amet</p>
+		</div>
+		<div class="small-8 columns">
+			<h4>A wizard's job is to vex chumps quickly in fog.
+				The wizard quickly jinxed the gnomes before they vaporized.</h4>
+		</div>
+
+		<div class="small-8 columns code-field">
+			Code field
+		</div>
+		<div class="small-4 columns">
+			<h6>Notes</h6>
+			<p>H4 is used in the page header  - usually as a link and only once per page</p>
+		</div>
+	</div>
+	
+		<div id="section-h3" class="row full-width">
+		<div class="small-4 columns">
+			<h1>h5</h1>
+			<p>lorem ipsum sit amet</p>
+		</div>
+		<div class="small-8 columns">
+			<h5>A wizard's job is to vex chumps quickly in fog.
+				The wizard quickly jinxed the gnomes before they vaporized.</h5>
+		</div>
+
+		<div class="small-8 columns code-field">
+			Code field
+		</div>
+		<div class="small-4 columns">
+			<h6>Notes</h6>
+			<p>H5 is used in the page header  - usually as a link and only once per page</p>
+		</div>
+	</div>
+
 
 
 
