Typography page content

--- a/_posts/website/visual-design/2014-01-01-typography.html
+++ b/_posts/website/visual-design/2014-01-01-typography.html
@@ -24,13 +24,18 @@ permalink: website/visual-design/typography
 			<li><a href="#section-h3">H3</a></li>
 			<li><a href="#section-h4">H4</a></li>
 			<li><a href="#section-h5">H5</a></li>
+			<li><a href="#section-h6">H6</a></li>
+			<li><a href="#section-body-text">Body Text</a></li>
 		</ul>
 	</nav>
 
-	<div id="section-h1" class="row full-width">
+	<div id="section-h1" class="row full-width typo-item">
 		<div class="small-4 columns">
 			<h1>h1</h1>
-			<p>lorem ipsum sit amet</p>
+			<p>
+				38px<br/>
+				line-height 46px
+			</p>
 		</div>
 		<div class="small-8 columns">
 			<h1>A wizard's job is to vex chumps quickly in fog.</h1>
@@ -43,14 +48,15 @@ permalink: website/visual-design/typography
 			<h6>Notes</h6>
 			<p>H1 is used in the page header  - usually as a link and only once per page</p>
 		</div>
-
 	</div>
 
-
-	<div id="section-h2" class="row full-width">
+	<div id="section-h2" class="row full-width typo-item">
 		<div class="small-4 columns">
-			<h1>h2</h1>
-			<p>lorem ipsum sit amet</p>
+			<h2>h2</h2>
+			<p>
+				29px<br/>
+				line-height 38px
+			</p>
 		</div>
 		<div class="small-8 columns">
 			<h2>A wizard's job is to vex chumps quickly in fog.
@@ -66,10 +72,13 @@ permalink: website/visual-design/typography
 		</div>
 	</div>
 
-	<div id="section-h3" class="row full-width">
+	<div id="section-h3" class="row full-width typo-item">
 		<div class="small-4 columns">
-			<h1>h3</h1>
-			<p>lorem ipsum sit amet</p>
+			<h3>h3</h3>
+			<p>
+				20px<br/>
+				line-height 26px
+			</p>
 		</div>
 		<div class="small-8 columns">
 			<h3>A wizard's job is to vex chumps quickly in fog.
@@ -84,11 +93,14 @@ permalink: website/visual-design/typography
 			<p>H1 is used in the page header  - usually as a link and only once per page</p>
 		</div>
 	</div>
-	
-	<div id="section-h4" class="row full-width">
+
+	<div id="section-h4" class="row full-width typo-item">
 		<div class="small-4 columns">
-			<h1>h4</h1>
-			<p>lorem ipsum sit amet</p>
+			<h4>h4</h4>
+			<p>
+				17px<br/>
+				line-height 22px
+			</p>
 		</div>
 		<div class="small-8 columns">
 			<h4>A wizard's job is to vex chumps quickly in fog.
@@ -103,11 +115,14 @@ permalink: website/visual-design/typography
 			<p>H4 is used in the page header  - usually as a link and only once per page</p>
 		</div>
 	</div>
-	
-		<div id="section-h3" class="row full-width">
+
+	<div id="section-h5" class="row full-width typo-item">
 		<div class="small-4 columns">
-			<h1>h5</h1>
-			<p>lorem ipsum sit amet</p>
+			<h5>h5</h5>
+			<p>
+				15px<br/>
+				line-height 22px
+			</p>
 		</div>
 		<div class="small-8 columns">
 			<h5>A wizard's job is to vex chumps quickly in fog.
@@ -123,10 +138,47 @@ permalink: website/visual-design/typography
 		</div>
 	</div>
 
+	<div id="section-h6" class="row full-width typo-item">
+		<div class="small-4 columns">
+			<h6>h6</h6>
+			<p>
+				13px<br/>
+				line-height 22px
+			</p>
+		</div>
+		<div class="small-8 columns">
+			<h6>A wizard's job is to vex chumps quickly in fog.
+				The wizard quickly jinxed the gnomes before they vaporized.</h6>
+		</div>
 
+		<div class="small-8 columns code-field typo-item">
+			Code field
+		</div>
+		<div class="small-4 columns">
+			<h6>Notes</h6>
+			<p>H5 is used in the page header  - usually as a link and only once per page</p>
+		</div>
+	</div>
 
+	<div id="section-body-text" class="row full-width typo-item">
+		<div class="small-4 columns">
+			<h4>Body Text</h4>
+			<p>
+				16px<br/>
+				line-height 26px
+			</p>
+		</div>
+		<div class="small-8 columns">
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi tempus gravida nisi venenatis aliquet. Curabitur porta consequat risus, a aliquam ipsum vestibulum eget. Nunc id tellus tortor. Donec eleifend turpis nunc, in pulvinar ipsum vehicula quis. Nunc luctus viverra est, a accumsan magna aliquet id. Mauris sit amet est posuere, ullamcorper massa ac, imperdiet risus. Suspendisse dictum, velit eu congue egestas, urna erat adipiscing sem, viverra imperdiet quam libero quis leo. </p>
+		</div>
 
-	<p>Aenean porta consectetur tristique. Fusce vel elit tellus. Phasellus tristique porta sapien, quis fringilla metus vehicula et. Pellentesque quis condimentum enim, pellentesque ultricies massa. Nullam ultricies, nulla id commodo luctus, ante neque malesuada elit, vitae dapibus quam nisl sit amet nunc. Aenean in urna sed odio laoreet bibendum in eget magna. Ut tortor lorem, feugiat eu ligula vel, tincidunt facilisis magna.</p>
+		<div class="small-8 columns code-field typo-item">
+			Code field
+		</div>
+		<div class="small-4 columns">
+			<h5>Notes</h5>
+			<p>H5 is used in the page header  - usually as a link and only once per page</p>
+		</div>
+	</div>
 
-	<p>Duis posuere, metus non sollicitudin convallis, nibh augue rhoncus orci, eget interdum purus sapien scelerisque orci. Aliquam erat volutpat. Aliquam quam lorem, condimentum et ultrices ac, sagittis vitae sem. Suspendisse luctus sapien at vestibulum posuere. Pellentesque malesuada erat elit, sed pretium lorem tempus non. Fusce neque enim, placerat molestie nunc eget, vestibulum imperdiet massa. In vitae elit ac risus lobortis porttitor. In id purus erat. Duis ut tincidunt magna, at convallis lectus. Vivamus hendrerit diam sed ornare feugiat. Sed interdum sed sem a feugiat. Aliquam congue elementum cursus. Donec vulputate pellentesque arcu, quis tincidunt velit luctus commodo.</p>
 </div>
