Colors page content

--- a/_posts/website/visual-design/2014-01-01-color.html
+++ b/_posts/website/visual-design/2014-01-01-color.html
@@ -4,4 +4,55 @@ title: Color & Color Usage
 category: visual-design-sub
 permalink: website/visual-design/color
 ---
-color
+
+<header>
+	<h1 class="small-12 columns">Color my Wikia</h1>
+	<div class="row full-width">
+		<div class="small-8 columns">
+			<p>This typeface, designed by Max Miedinger and other project members at the Haas’sche Schriftgiesserei.</p>
+		</div>
+		<div class="small-4 columns">
+			<a href="" target="_blank" class="button right">Download swatches (ASE)</a>
+		</div>
+	</div>
+</header>
+<div class="content color-content clearfix">
+	<h3>Primary</h3>
+	<div class="color-box">
+		<div class="color-probe mordor-bg-color"></div>
+		<h5>Mordor</h5>
+		<p>#000000</p>
+	</div>
+
+	<div class="color-box">
+		<div class="color-probe dark-knight-bg-color"></div>
+		<h5>Dark Knight</h5>
+		<p>#092140</p>
+	</div>
+
+	<div class="color-box">
+		<div class="color-probe cool-blue-bg-color"></div>
+		<h5>Cool Blue</h5>
+		<p>#0a5fa3</p>
+	</div>
+
+	<div class="color-box">
+		<div class="color-probe walter-white-bg-color"></div>
+		<h5>Walter White</h5>
+		<p>#c7d1d8</p>
+	</div>
+
+	<div class="color-box">
+		<div class="color-probe winterfell-bg-color"></div>
+		<h5>Wintefell</h5>
+		<p>#ffffff</p>
+	</div>
+
+	<h3 class="clear">Hubs</h3>
+	<div class="color-box">
+		<div class="color-probe mordor-bg-color"></div>
+		<h5>Mordor</h5>
+		<p>#000000</p>
+	</div>
+
+</div>
