Subpage footer prev next nav

--- a/_posts/website/visual-design/2014-01-01-color.html
+++ b/_posts/website/visual-design/2014-01-01-color.html
@@ -3,6 +3,8 @@ layout: subpage
 title: Color & Color Usage
 category: visual-design-sub
 permalink: website/visual-design/color
+prevText: Typography
+prevLink: website/visual-design/typography
 ---
 
 <header>
