--- a/_posts/website/visual-design/2014-01-01-typography.html
+++ b/_posts/website/visual-design/2014-01-01-typography.html
@@ -3,6 +3,8 @@ layout: subpage
 title: Typography
 category: visual-design-sub
 permalink: website/visual-design/typography
+nextText: Color & Color Usage
+nextLink: website/visual-design/color
 ---
 
 <header>
